@@ -1,3 +1,8 @@
+2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b209
+
+	* Bug 977777: If newName and oldName are the same, just close the
+	  dialog
+
 2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b208
 
 	* Change: view_album - unset $myAlbum if item isn't an album so that
